--- a/index.html
+++ b/index.html
@@ -1,149 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
+    <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Anton|Jura&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>My Portfolio</title>
   </head>
-
   <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
-      <!-- Container wrapper -->
-      <div class="container-fluid">
-        <!-- Toggle button -->
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-mdb-toggle="collapse"
-          data-mdb-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <i class="fas fa-bars"></i>
-        </button>
-
-        <!-- Collapsible wrapper -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <!-- Navbar brand -->
-          <a class="navbar-brand mt-2 mt-lg-0" href="#">
-            <img
-              src="./images/logo.png"
-              height="15"
-              alt="Two MM's as a logo"
-              loading="lazy"
-            />
-          </a>
-          <!-- Left links -->
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Work</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
-          <!-- Left links -->
-        </div>
-        <!-- Collapsible wrapper -->
-
-        <!-- Right elements -->
-        <div class="d-flex align-items-center">
-          <!-- Icon -->
-          <a class="link-grayish me-3" href="#">
-            <i class="fas fa-shopping-cart"></i>
-          </a>
-
-          <!-- Notifications -->
-          <div class="dropdown">
-            <a
-              class="link-grayish me-3 dropdown-toggle hidden-arrow"
-              href="#"
-              id="navbarDropdownMenuLink"
-              role="button"
-              data-mdb-toggle="dropdown"
-              aria-expanded="false"
+    <!-- Navigation bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light customNav">
+      <a class="navbar-brand" href="#"
+        ><img src="./images/logo.png" />Meriel McCall</a
+      >
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#"
+              >Work <span class="sr-only">(current)</span></a
             >
-              <i class="fas fa-bell"></i>
-              <span class="badge rounded-pill badge-notification bg-danger"
-                >1</span
-              >
-            </a>
-          </div>
-          <!-- Avatar -->
-          <div class="dropdown">
-            <a
-              class="dropdown-toggle d-flex align-items-center hidden-arrow"
-              href="#"
-              id="navbarDropdownMenuAvatar"
-              role="button"
-              data-mdb-toggle="dropdown"
-              aria-expanded="false"
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="btn btn-primary btn-lg navCTA" href="#" role="button"
+              >Resume</a
             >
-              <img
-                src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp"
-                class="rounded-circle"
-                height="25"
-                alt="Black and White Portrait of a Man"
-                loading="lazy"
-              />
-            </a>
-            <ul
-              class="dropdown-menu dropdown-menu-end"
-              aria-labelledby="navbarDropdownMenuAvatar"
-            >
-              <li>
-                <a class="dropdown-item" href="#">Work</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="#">Settings</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="#">Logout</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <!-- Right elements -->
+          </li>
+        </ul>
       </div>
-      <!-- Container wrapper -->
     </nav>
-    <section class="heroImg">
-      <div class="content">
-        <img
-          src="./images/Prof pic.png"
-          alt="photo of a woman smiling"
-          class="mainPic"
-        />
-        <p class="introWords">
-          Hello! I'm Meriel McCall, I am a UX Designer based in Minneapolis, MN.
-        </p>
+    <!-- End navigation bar -->
+
+    <!-- Jumbotron -->
+    <div class="jumbotron rockBackground">
+      <div class="jumboCopy">
+        <h1 class="display-4">Hello! I'm Meriel</h1>
+        <p class="lead">I am a UX/UI Designer based in Minneapolis, MN.</p>
       </div>
-    </section>
+    </div>
+    <!-- End jumbotron -->
+
+    <!-- Cards -->
+    <div class="container-fluid content">
+      <h2 class="sectionHeading">My Work</h2>
+      <div class="row showsNear">
+        <!-- Card 1 -->
+        <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+          <div class="card">
+            <img
+              src="./images/Screen Shot 2022-08-01 at 2.37.41 PM.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Non-Profit website redesign</h5>
+              <p class="card-text"></p>
+              <a href="#" class="btn btn-primary">View case study</a>
+            </div>
+          </div>
+        </div>
+        <!-- End card 1 -->
+
+        <!-- Card 2 -->
+        <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+          <div class="card">
+            <img
+              src="./images/Screen Shot 2022-08-01 at 2.37.41 PM.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Government Website Redesign</h5>
+              <p class="card-text"></p>
+              <a href="#" class="btn btn-primary">View case study</a>
+            </div>
+          </div>
+        </div>
+        <!-- End card 2 -->
+
+        <!-- Card 3 -->
+        <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+          <div class="card">
+            <img
+              src="./images/Screen Shot 2022-08-01 at 2.37.41 PM.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Mobile App Redesign</h5>
+              <p class="card-text"></p>
+              <a href="#" class="btn btn-primary">View case study</a>
+            </div>
+          </div>
+        </div>
+        <!-- End card 3 -->
+      </div>
+    </div>
+    <!-- End cards -->
+
+    <!-- Content -->
+    <div class="container-fluid content">
+      <h2 class="sectionHeading">About Me</h2>
+
+      <!-- Row 1 -->
+      <div class="row valueProp">
+        <div class="imageContainer col-3">
+          <img src="./images/priscilla-du-preez-GOR2kYIPT6E-unsplash.png" />
+        </div>
+        <div class="text col-8">
+          <p>
+            Hello! I am Meriel McCall and I am a UX/UI designer. I have spent
+            the last 10+ years working in the service industry in customer
+            facing roles with most recently bartending and managing. That
+            experience has shaped me into a fast learner and a quick thinker. I
+            am a kinesthetic learner who adapts very quickly. I enjoy research
+            and trying to understand people. I am a creative, empathetic and
+            humble, team player. I specialize in working in groups and enjoy
+            solving user problems. My skills include user-centric design
+            research, visual prototyping and wireframing and basic front end
+            development. In my projects I have performed the roles, UX
+            researcher, UX and UI designer and front end developer.
+          </p>
+          <p>In my free time I enjoy riding my bike, going for walks, thrift stores and the farmers market.</p>
+        </div>
+      </div>
+      <!-- End row 1 -->
+
+      <!-- Row 3 -->
+     
+    <!-- End content -->
+
+    <!-- Footer -->
+    <footer class="emailContain">
+     
+    </footer>
+    <!-- End footer -->
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
       integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
